styles/main.css
/* ... */
#nebula-content {
  position: relative;
  text-align: left;
}
#nebula-column-image-two {
  position: relative;
  top: 65%;
}
.nebula-button {
  background-color: #162753;
  color: #E2C8B1;
  font-family: "Abel", sans-serif;
  text-decoration: none;

  display: block;
  width: 115px;
  height: 25px;
  padding: 10px;
  text-align: center;
  border-radius: 5px;
  font-weight: bold;
  line-height: 25px;
  position: relative;
top: 38px;
}
.nebula-button:hover {
  background-color: #641B36;
}

/*
  bio section
*/
#bio-page-section {
  background-color:  #641B36;
  height: 800px;
}
.bio-column {
  float: left;
  width: 40%;
}
#flower-banner-1 {
  display: none;
}
#flower-banner-2 {
  display: none;
}
#footer-image-1 {
  display: none;
}

#bio-content-1 {
  padding-top: 20%;
  padding-left: 15%;
}
#bio-content-2 {
  padding-top:20%;
  padding-left: 10%;
}
#bio-text {
  color: #FFFFFF;
  font-size: 1.625rem;
  font-family: "Abel", sans-serif;
  width: 75%;
  margin-top:10%;
}
#bio-home-image {
  width: 418px;
  height: 433px;
}
#bio-link {
  color: #E2C8B1;
  font-size: 1.625rem;
  font-family: "Abel", sans-serif;
  margin-left: 15%;
  top: 50px;
position: relative;
}


/*
  skills
*/
#skills-page-section {
  height: 1050px;
  text-align: center;
  margin-top: 5%;
}
#skills-main-header {
  color: #162753;
  font-size: 3rem;
  font-family: "Abel", sans-serif;
  text-align:  center;
}
#skills-cell-1 {
  border-bottom: 1px solid #dfdfdf;
  border-right: 1px solid #dfdfdf;
  text-align: center;
  height: 450px;
}
#skills-cell-2 {
  border-top: 1px solid #dfdfdf;
  height: 450px;
}
#skills-cell-3 {
  border-left: 1px solid #dfdfdf;
  border-bottom: 1px solid #dfdfdf;
  height: 450px;
}
#skills-cell-4 {
  border-left: 1px solid #dfdfdf;
  height: 450px;
}
.skills-blue-flower {
  width: 40px;
  height: 40px;
  margin-bottom: 2%;
}
.skills-blue-diamond {
  width: 85px;
  height: 60px;
}
.skills-heading {
  font-size: 2rem;
  color: #641B36;
  font-family: "Abel", sans-serif;
  margin-top: .0025%;
  position: relative;
  margin-left: 10%;
}
.skills-list {
    margin-left: 10%;
}
.skill-list-item {
  text-align: center;
  line-height: 2.5rem;
}

/*
  footer
*/
.footer-page-section {
  background-color:  #162753;
  height: 414px;
  width: 100%;
}
#footer-column-2 {
  width: 80%;
  text-align: center;
}
#footer-text {
  color:#FFFFFF;
  font-size: 2.625rem;
  font-family: "Abel", sans-serif;
  font-weight: lighter;
  position: relative;
  top: 30%;
}
#bottom-banner {
  width: 100%;
  height: 40px;
  bottom: 0px;
  left: 0px;
  position: relative;
}
.footer-icons {
  display:inline;
  margin-left: -5%;
  position: relative;
  top: -30%;
}
.footer-linkedin{
    margin-left:5%;
}
.footer-instagram{
    margin-left:5%;
}
.footer-email{
    margin-left:5%;
}
.footer-github{
    margin-left:5%;
    height: 50px;
    width: 50px;
}

#footer-bottom-image {
  top: 40%;
}


/****************
 *
 * case study .css
 *
 * ***************/
@font-face {
  font-family: "Abel", sans-serif;
  src:url(abel.ttf);
}

body {
  background-color: #F2F2F2;
  font-weight: normal;

  /* maybe figure out why it was overflowing in the first place */
  overflow-x: hidden;
}

li {
  font-size: 26px;
  color: #162753;
  font-family: "Abel", sans-serif;
  list-style-type: none;
  text-align: left;
}

p {
  color: #641B36;
  font-family: "Abel", sans-serif;
  font-weight: lighter;
  font-size: 1.625rem;
  line-height: 1.5em;
  margin-top:2%;
}
#summary-user-research-heading {
  position: relative;
  margin-top:15%;
  margin-left: 40%
}
#summary-tools-used-heading {
  position: relative;
  margin-top:15%;
  margin-left: 45%
}
#backToTopButton {
  position: fixed;
  right: 100px;
}

/* Nav stuff*/
.nav {
  height: 150px;
}
.nav-column {
  float: left;
  width: 50%;
}
.nav-logo {
    height: 80px;
    width: 80px;
    padding-top: 15px;
    padding-bottom: 15px;
    padding-left: 15px;
}
.nav-links {
  float: right;
  left:-5%
}
.nav-link {
    display: inline-block;
    float: left;
    padding: 0;
    margin: 10px;
}

/*
  hero stuff
*/
#hero-page-section {
  background-color: #162753;
  height: 1400px;
}
#hero-row {
  height: 60%;
}
#hero-row-small {
    height: 40%;
}
#hero-neb-image {
  position: relative;
  top: 20%;
  margin-left: 20%;
  width: 60%;
}
#hero-heading {
    position: relative;
    top: 30%;
    text-align: center;
}
.about-hero-gold-diamond {
  height: 20%;
  transform: rotateY(180deg);
}
.hero-button {
  background-color: #162753;
  color: #162753;
  font-family: "Abel", sans-serif;
  display: block;
  width: 115px;
  height: 25px;
  background: #4E9CAF;
  padding: 10px;
  text-align: center;
  border-radius: 5px;
  font-weight: bold;
  line-height: 25px;
  background-color: #FEACC6;
  position: relative;
  margin-left: 45%;
  top: 15%;
  text-decoration: none;
}
.hero-button:hover {
   background-color: #E2C8B1;
}

/* Summary stuff */
#summary-page-section {
  height:1000px;
  padding-top: 2.5%;
}
#summary-blue-diamond {
  transform: rotateY(180deg);
}

.summary-row-two {
  height: 60%;
}
/* Problem stuff*/

#problem-page-section {
  height: 300px;
  background-color: #641B36;
  padding-top: 5%;
}
#problem-column-two {
  width: 80%;
}
#problem-flower {
  height: 25%;
  width: 70%;
  padding-left: 15%;
  padding-right: 15%;
}
#problem-diamond {
  height: 25%;
  top: 70%;
  transform: rotateY(180deg);
}
#problem-header{
  color: #E2C8B1;
  font-family: "Abel", sans-serif;
  font-size: 2rem;
  font-weight: lighter;
}
#problem-content {
  color: #F2F2F2;
  font-family: "Abel", sans-serif;
  font-size: 1.625rem;
  font-weight: lighter;
}

/* Solution stuff */

#solution-page-section {
  height: 1200px;
  padding-top: 5%;
}
#solution-smaller-row {
  height: 30%;
}
#solution-bigger-row {
  height: 70%;
  top:-10%;
}

.solution-image {
  margin:1.5%;
  margin-left: 1%;
  width: 30%;
  position: relative;
  margin-top: 5%;
}
/* ... */

